Added links to pages, tasks bug fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,10 @@
     border: none;
 }
 
+a:link {
+    text-decoration: none;
+}
+
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
