--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,9 +12,9 @@
 <div id="wrapper">
     <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
         <div class="container-fluid d-flex flex-column p-0"><a
-                    class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
-                <div class="sidebar-brand-text mx-3"><span>Brand</span></div>
+                    class="navbar-brand d-flex justify-content-center align-items-center  m-0" href="#">
+
+                <div class="sidebar-brand-text mx-3"><img style="padding: 10px" height="80px" width="80px" src="/img/logo.png"></div>
             </a>
             <hr class="sidebar-divider my-0">
             <ul class="navbar-nav text-light" id="accordionSidebar">
@@ -55,7 +55,7 @@
                                 <div class="row align-items-center no-gutters">
                                     <div class="col me-2">
                                         <div class="text-uppercase text-primary fw-bold text-xs mb-1 fs-6">
-                                            <span>Weather <a href="#" id='refresh_weather' >
+                                            <span><a href="/weather">Weather </a><a href="#" id='refresh_weather' >
                                 <i class="bi bi-arrow-clockwise"></i>
                             </a> </span>
                                         </div>
@@ -71,7 +71,7 @@
                             <div class="card-body">
                                 <div class="row align-items-center no-gutters">
                                     <div class="col me-2">
-                                        <div class="text-uppercase text-info fw-bold text-xs mb-1 fs-6"><span>Tasks</span>
+                                        <div class="text-uppercase text-info fw-bold text-xs mb-1 fs-6"><span><a href="/tasks">Tasks</a></span>
                                         </div>
                                         <div class="row g-0 align-items-center">
                                             <div class="col-auto">
@@ -97,8 +97,8 @@
                     </div>
                     <div class="col" style="font-size: 10px;">
 
-                        <h1 style="font-size: 22.520000000000003px;color: var(--bs-indigo);font-weight: bold;margin-left: 15px;">
-                            News Flash <a href="#" id='refresh_news' class="btn btn-info btn-sm">
+                        <h1 style="font-size: 22.520000000000003px;color: var(--bs-indigo);font-weight: bold;margin-left: 15px;"><a href="/news">News Flash  </a>
+                            <a href="#" id='refresh_news' class="btn btn-info btn-sm">
                                 <i class="bi bi-arrow-clockwise"></i>
                             </a></h1>
                         <div class="card" style="margin: 15px;">
