--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Register - Brand</title>
+    <title>Register - UniTab</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="/fonts/fontawesome-all.min.css">
@@ -19,7 +20,7 @@
             <div class="card-body p-0">
                 <div class="row">
                     <div class="col-lg-5 d-none d-lg-flex">
-                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;img/dogs/image2.jpeg&quot;);"></div>
+                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;img/registration_img2.jpg&quot;);"></div>
                     </div>
                     <div class="col-lg-7">
                         <div class="p-5">
@@ -38,7 +39,7 @@
                                 </div><button class="btn btn-primary d-block btn-user w-100" type="submit">Register Account</button>
                                 <hr>
                             </form>
-                            <div class="text-center"><a class="small" href="forgot-password.ejs">Forgot Password?</a></div>
+
                             <div class="text-center"><a class="small" href="login">Already have an account? Login!</a></div>
                         </div>
                     </div>
