--- a/views/partials/header_common.ejs
+++ b/views/partials/header_common.ejs
@@ -2,6 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
+<link rel="icon" type="image/x-icon" href="/img/favicon.png">
 <script src="/js/moment.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 <link rel="stylesheet" href="/fonts/fontawesome-all.min.css">
