--- a/views/pages/tasks.ejs
+++ b/views/pages/tasks.ejs
@@ -10,49 +10,62 @@
 </head>
 
 <body id="page-top">
-    <div id="wrapper">
-        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-text mx-3"><img style="padding: 10px" height="80px" width="80px" src="/img/logo.png"></div>
+<div id="wrapper">
+    <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+        <div class="container-fluid d-flex flex-column p-0"><a
+                    class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0"
+                    href="/index">
+                <div class="sidebar-brand-text mx-3"><img style="padding: 10px" height="80px" width="80px"
+                                                          src="/img/logo.png"></div>
 
-                </a>
-                <hr class="sidebar-divider my-0">
-                <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="index"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="tasks" ><i class="fas fa-table"></i><span>Tasks</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="news"><i class="far fa-user-circle"></i><span>News</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="weather"><i class="bi bi-cloud"></i><span>Weather</span></a></li>
-                </ul>
-                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
+            </a>
+            <hr class="sidebar-divider my-0">
+            <ul class="navbar-nav text-light" id="accordionSidebar">
+                <li class="nav-item"><a class="nav-link" href="index"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="profile"><i class="fas fa-user"></i><span>Profile</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link active" href="tasks"><i
+                                class="fas fa-table"></i><span>Tasks</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="news"><i class="far fa-user-circle"></i><span>News</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="weather"><i class="bi bi-cloud"></i><span>Weather</span></a>
+                </li>
+            </ul>
+            <div class="text-center d-none d-md-inline">
+                <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
             </div>
-        </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content" style="height: 100%;width: 100%;">
-                <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
-                        <h3 class="text-dark mb-0">Tasks</h3>
-                        <%- include('../partials/search_partial') %>
-                    </div>
-                    <div  style="margin-right: 50px">
-                        <span id='ct6' style="white-space: nowrap; font-size: 20px"></span>
-                    </div>
-                </nav>
-                <div class="container">
-                    <div></div>
+        </div>
+    </nav>
+    <div class="d-flex flex-column" id="content-wrapper">
+        <div id="content" style="height: 100%;width: 100%;">
+            <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
+                <div class="container-fluid">
+                    <button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i
+                                class="fas fa-bars"></i></button>
+                    <h3 class="text-dark mb-0">Tasks</h3>
+                    <%- include('../partials/search_partial') %>
                 </div>
-                <%- include('../partials/tasks_index') %>
-                <div style="margin: 20px">
-                <a class="btn btn-info btn-circle ms-1"  id='add_button' role="button"><i class="bi bi-plus-lg"></i></a>
+                <div style="margin-right: 50px">
+                    <span id='ct6' style="white-space: nowrap; font-size: 20px"></span>
                 </div>
+            </nav>
+            <div class="container">
+                <div></div>
             </div>
-        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
+            <%- include('../partials/tasks_index') %>
+            <div style="margin: 20px">
+                <a class="btn btn-info btn-circle ms-1" id='add_button' role="button"><i class="bi bi-plus-lg"></i></a>
+            </div>
+        </div>
     </div>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/js/theme.js"></script>
-    <script src="/js/common_all.js"></script>
-    <script src="/js/search.js"></script>
-    <script src="/js/tasks.js"></script>
+    <a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
+</div>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/theme.js"></script>
+<script src="/js/common_all.js"></script>
+<script src="/js/search.js"></script>
+<script src="/js/tasks.js"></script>
 
 </body>
 
