--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -29,9 +29,11 @@
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
-                                    <div class="alert alert-danger" role="alert">
-                                        This is a danger alert—check it out!
+                                    <% if(error) {%>
+                                    <div class="alert alert-danger" role="alert" style="text-transform: capitalize">
+                                        <%= error %>
                                     </div>
+                                    <% } %>
                                     <form class="user" action="/login" method="post">
                                         <div class="mb-3"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email"></div>
                                         <div class="mb-3"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" ></div>
