--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -27,6 +27,11 @@
                             <div class="text-center">
                                 <h4 class="text-dark mb-4">Create an Account!</h4>
                             </div>
+                            <% if(error) {%>
+                                <div class="alert alert-danger" role="alert" style="text-transform: capitalize">
+                                    <%= error %>
+                                </div>
+                            <% } %>
                             <form class="user" action="/register" method="post">
                                 <div class="row mb-3">
                                     <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="First Name" name="first_name"></div>
