--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -13,7 +13,8 @@
 <div id="wrapper">
     <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
         <div class="container-fluid d-flex flex-column p-0"><a
-                    class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="/index">
+                    class="navbar-brand d-flex justify-content-center align-items-center  m-0" href="#">
+
                 <div class="sidebar-brand-text mx-3"><img style="padding: 10px" height="80px" width="80px" src="/img/logo.png"></div>
             </a>
             <hr class="sidebar-divider my-0">
@@ -24,10 +25,10 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="tasks"><i class="fas fa-table"></i><span>Tasks</span></a>
                 </li>
-                <li class="nav-item"><a class="nav-link active" href="news"><i
-                                class="far fa-user-circle"></i><span>News</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="weather"><i class="bi bi-cloud"></i><span>Weather</span></a>
+                <li class="nav-item"><a class="nav-link active" href="news"><i class="far fa-user-circle"></i><span>News</span></a>
                 </li>
+                <li class="nav-item"><a class="nav-link" href="weather"><i class="bi bi-cloud"></i><span>Weather</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="logout"><i class="bi bi-box-arrow-right"></i><span>Logout</span></a></li>
             </ul>
             <div class="text-center d-none d-md-inline">
                 <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
