--- a/views/partials/news_index_partial.ejs
+++ b/views/partials/news_index_partial.ejs
@@ -4,7 +4,7 @@
 <% continue} %>
         <% if(i>9) {%>
             <% break;} %>
-    <a href='<%= resp['articles'][i]['link'] %>' target="_blank" rel="noopener noreferrer">
+    <a style="display: block" href='<%= resp['articles'][i]['link'] %>' target="_blank" rel="noopener noreferrer">
 <div class="card-body" style="box-shadow: 3px 3px 8px rgb(139,139,139);margin-bottom: 10px;">
     <h4 class="card-title" style="font-size: 20px"><%= resp['articles'][i]['title'] %></h4>
     <p class="card-text" style="font-size: 10px; color: black"><%= resp['articles'][i]['excerpt'] %></p>
